update react/quantity component

--- a/src/index.html
+++ b/src/index.html
@@ -31,21 +31,57 @@
       </form>
     </div>
   </nav>
-  <main style="height: 150vh;">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
+  <main>
+    <div id="quantity-input"></div>
+
+    <div>
+      <input type="text" value="0" />
+      <select name="quantity" class="quantity">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10+</option>
+      </select>
+      <div class="eComQuantity">
+        <button class="quantitySelectValue" type="button">1 <i class="fa fa-angle-down"></i></button>
+        <div class="quantitySelectDropdown hidden">
+          <button type="button" value="1">1</button>
+          <button type="button" value="2">2</button>
+          <button type="button" value="3">3</button>
+          <button type="button" value="4">4</button>
+          <button type="button" value="5">5</button>
+          <button type="button" value="6">6</button>
+          <button type="button" value="7">7</button>
+          <button type="button" value="8">8</button>
+          <button type="button" value="9">9</button>
+          <button type="button" value="10">10+</button>        
+        </div>        
       </div>
+      <br><br><br><br><br><br><br><br>
+      <div class="eComQuantity">
+          <button class="quantitySelectValue" type="button">1 <i class="fa fa-angle-down"></i></button>
+          <div class="quantitySelectDropdown hidden">
+            <button type="button" value="1">1</button>
+            <button type="button" value="2">2</button>
+            <button type="button" value="3">3</button>
+            <button type="button" value="4">4</button>
+            <button type="button" value="5">5</button>
+            <button type="button" value="6">6</button>
+            <button type="button" value="7">7</button>
+            <button type="button" value="8">8</button>
+            <button type="button" value="9">9</button>
+            <button type="button" value="10">10+</button>        
+          </div>        
+        </div>
     </div>
 
+    <input type="text" value="1" />
 
   </main>
  
