--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,10 @@
 
 
     
-    <div class="quantity-input" data-stock="21" data-value="1"></div>
-    <div class="quantity-input" data-stock="5" data-value="2"></div>
+    <div class="quantity-input" data-stock="21" data-value="1" data-name="EcomTag1"></div>
+    <div class="quantity-input" data-stock="5" data-value="2" data-name="EcomTag2"></div>
     <div class="quantity-input"></div>
+    <div class="quantity-input" data-stock="10" data-value="1" data-name="EcomTag3"></div>
 
  
 
