update for min quantity / step

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,10 @@
 
 
     
-    <div class="quantity-input" data-stock="21" data-value="1" data-name="EcomTag1"></div>
-    <div class="quantity-input" data-stock="5" data-value="2" data-name="EcomTag2"></div>
+    <div class="quantity-input" data-stock="21" data-value="3" data-step="3" data-min="3" data-name="EcomTag1"></div>
+    <div class="quantity-input" data-stock="25" data-value="21" data-name="EcomTag2"></div>
     <div class="quantity-input"></div>
-    <div class="quantity-input" data-stock="10" data-value="1" data-name="EcomTag3"></div>
+    <div class="quantity-input" data-stock="10" data-value="1" data-step="1" data-min="3" data-name="EcomTag3"></div>
 
  
 
