--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Edele</title>  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Elune</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand d-flex align-items-center" href="#"> <img src="img/logo.svg" class="mr-2" width="40" height="40" alt=""><strong>Online Store</strong></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-co ntrols="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center justify-content-center" type="submit">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
-      </form>
-    </div>
-  </nav>
-  <main>
-
-
-    
-    <div class="quantity-input" data-stock="21" data-value="3" data-step="3" data-min="3" data-name="EcomTag1"></div>
-    <div class="quantity-input" data-stock="2" data-value="33" data-step="3" data-min="3" data-name="EcomTag2"></div>
-    <div class="quantity-input"></div>
-    <div class="quantity-input" data-stock="10" data-value="1" data-step="1" data-min="3" data-name="EcomTag3"></div>
-
- 
-
-    
-
-  </main>
- 
+    <h1>Elune-Adore</h1>
+    <lit-heading tag="h2" styling="hr1" color="brand" value="This is a cool heading"></lit-heading>
+    <lit-heading tag="h3" styling="h1" cssclass="font-subheading" value="This is a cool subheading"></lit-heading>   
+    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p> -->
+    <lit-paragraphs><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p></lit-paragraphs>
+    <script src="app.js"></script>
 </body>
 </html>
