--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,62 @@
     <lit-heading tag="h3" styling="h1" cssclass="font-subheading" value="This is a cool subheading"></lit-heading>   
     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p> -->
     <lit-paragraphs><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p></lit-paragraphs>
+
+
+
+
+    <div class="test">
+      <div class="section__container container--narrow height-lg pb-0 content-container">
+
+        <div class="section__content content-row narrow content-row--spacing-none content-row--spacing-position-bottom">
+            <div class="block gap-">
+            <div class="content-row__item rowItemContent-5260 dw-mod">
+                <div class="content-row__item__body    dw-mod">
+                    
+
+
+
+
+
+
+
+
+  <div class="component-b-refactored  " style="background: #FFFFFF">
+       <div class="component-p-refactored__content gap-3 grid-md-3  align-items-center padding-x-default padding-y-medium">
+          <div class="image flex-wrap place-items-center col-md-1 w-100 ">         
+            <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="https://source.unsplash.com/wI6o8OwUwdw" />       
+          </div>
+          <div class="decor color-content child-mb-2 col-md-2 justify-content-start text-left font- flex-wrap align-items-top">
+              
+          <lit-heading tag="h2" styling="hr2" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit"></lit-heading>             
+          <lit-heading tag="h3" styling="h2" weight="normal" cssclass="font-subheading" value="Aliquam ullamcorper auctor tellus, vel condimentum sapien elementum et">Aliquam ullamcorper auctor tellus, vel condimentum sapien elementum et</lit-heading>                              
+          <div class="content w-100">
+            <lit-paragraphs>
+              <p>Nulla condimentum odio sit amet aliquet varius. Cras at felis velit. Maecenas consectetur felis nunc, ut ornare nisl dictum vel. Cras consequat pulvinar sem vitae ultricies. Sed eros est, venenatis vitae neque eget, tincidunt vestibulum odio. Duis pellentesque, nunc et porta vestibulum, justo massa vestibulum elit, non vehicula ipsum velit facilisis ligula.</p>
+              <p>Vivamus efficitur blandit enim, sit amet semper enim commodo a. Morbi rutrum, lacus vel pellentesque interdum, nulla leo tempus dui, vel scelerisque libero magna ac nulla. Mauris vel mi ac sapien volutpat consequat. Aliquam malesuada sem vitae lacinia commodo. Aliquam hendrerit erat sed nulla interdum posuere.</p>
+            </lit-paragraphs>
+          </div>
+          <div class="actions inline-flex child-mr-2">
+              <a href="/frontpage" class="btn btn-border--brand">Read more</a>
+            </div>
+          </div>
+      </div>
+   
+
+
+
+  </div>  
+
+
+
+
+ 
+                </div>
+            </div> 
+            </div>
+        </div>
+    </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
