--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,15 @@
   <title>Elune</title>
 </head>
 <body>
-    <h1>Elune-Adore</h1>
+    <!-- <h1>Elune-Adore</h1>
     <lit-heading tag="h2" styling="hr1" color="brand" value="This is a cool heading"></lit-heading>
-    <lit-heading tag="h3" styling="h1" cssclass="font-subheading" value="This is a cool subheading"></lit-heading>   
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p> -->
-    <lit-paragraphs><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p></lit-paragraphs>
+    <lit-heading tag="h3" styling="h1" cssclass="font-subheading" value="This is a cool subheading"></lit-heading>      
+    <lit-paragraphs><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu blandit nibh. Nunc imperdiet cursus enim at eleifend. Sed ac nisi tincidunt nisi vulputate congue id in nulla. Phasellus tincidunt dolor est, id pretium nunc blandit a. Proin tincidunt lectus sit amet congue fringilla. Nunc in varius turpis. Fusce ut nibh nec nunc condimentum aliquet. Etiam molestie, dolor eget ultrices porta, mauris augue auctor ipsum, sit amet facilisis orci ipsum ac purus. Integer consequat, elit quis cursus tincidunt, ante enim suscipit nisl, sit amet condimentum neque turpis quis nunc. Maecenas nec nisl a sapien consequat efficitur. Praesent aliquet semper arcu vel tincidunt. Curabitur id malesuada ligula, id euismod velit. Donec fringilla elementum tellus.</p></lit-paragraphs> -->
 
 
 
 
-    <div class="test">
+    <div class="test py-5 my-5">
       <div class="section__container container--narrow height-lg pb-0 content-container">
 
         <div class="section__content content-row narrow content-row--spacing-none content-row--spacing-position-bottom">
